[SC-228612] Adopt SDS Tabs to fix workflow tabs overflow styling (#2743)
* adopt sds beta tag

* adopt sds tab component

* adopt sds tags

* fix workflow tabs, temporarily remove beta label

* add beta tag

* add beta tag styling

* adopt Tabs on DiscoveryHeader

* fix beta tag styling

* fix lint error

* add overflow styling

* design feedback

* fix hover styling and add data-testid

* use old status label and add todo msg

--- a/app/assets/src/components/views/discovery/discovery_view.scss
+++ b/app/assets/src/components/views/discovery/discovery_view.scss
@@ -83,19 +83,14 @@
     }
 
     .workflowTabs {
-      margin-top: $sds-spaces-xs;
-      margin-bottom: $sds-spaces-xs;
+      overflow-x: clip;
 
-      .alignBetaTag {
+      .betaTag {
         display: inline-flex;
-      }
-
-      .tabLabel {
-        @include font-header-xs;
-      }
-
-      .tabCounter {
-        @include font-header-xs;
+        margin-left: $sds-spaces-xs;
+        // Undo xxs right margin and xs bottom margin included in SDS Tag component
+        margin-right: -$sds-spaces-xxs;
+        margin-bottom: -$sds-spaces-xs;
       }
     }
   }
